src/blocks/Header.css
.header {
  display: flex;
  justify-content: space-between;
  margin: 32px 40px 28px 40px;
}

.header__section {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header__location-edit {
  height: 15px;
  width: 15px;
  color: black;
  margin-left: 7px;
  padding: 4px;
  border-radius: 3px;
  transition: background-color 0.2s ease-in-out;
}

.header__location-edit:hover {
  background-color: rgba(0, 0, 0, 0.065);
}

.header__section-mobile {
  display: none;
}

.header-text {
  margin-top: 0px;
  margin-bottom: 0px;
  font-size: 20px;
}

.header__text-add {
  margin-right: 20px;
  cursor: pointer;
  transition: opacity 0.25s ease-in-out;
}

.header__text-add:hover {
  opacity: 0.6;
}

.header__text-name {
  margin-right: 12px;
}

.header__logo {
  width: 89px;
  height: 40px;
  margin-right: 24px;
}

.header__section-mobile .header-text {
  margin: 0px 40px 16px;
}

.header__toggle {
  margin: 0px 20px 0px 0px;
  display: flex;
  place-content: center;
}

.header__profile {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: inherit;
  transition: color 0.25s ease-in-out;
}
.header__profile:hover {
  color: rgba(0, 0, 0, 0.6);
}

.header__auth-section {
  display: flex;
  align-items: center;
  gap: 20px;
  cursor: pointer;
}

.header__auth-section .header-text {
  transition: opacity 0.25s ease-in-out;
}

.header__auth-section .header-text:hover {
  opacity: 0.6;
}

@media screen and (width <= 1140px) {
  .header__section-desktop {
    display: none;
  }
  .header__section-mobile {
    display: block;
  }
  .header__text_datelocation {
    display: none;
  }
}

@media screen and (width <= 790px) {
  .header {
    margin-bottom: 10px;
    margin-left: 16px;
    margin-right: 16px;
  }
  .header__section-mobile {
    display: block;
  }
  .header__section-mobile .header-text {
    margin-left: 16px;
  }
}

